crates/mycelium-hyphae/src/snapshots/mycelium_hyphae__parser__snapshot_tests__snap_multi_pseudo.snap
---
source: crates/mycelium-hyphae/src/parser.rs
assertion_line: 565
expression: result
---
Ok(
    SelectorList(
        [
            Simple(
                SimpleSelector {
                    base: Name(
                        "foo",
                    ),
                    pseudo_classes: [
                        PseudoClass {
                            name: "calls",
                            argument: None,
                        },
                        PseudoClass {
                            name: "imports",
                            argument: None,
                        },
                    ],
                },
            ),
        ],
    ),
)
