crates/mycelium-hyphae/src/snapshots/mycelium_hyphae__parser__snapshot_tests__snap_name_selector.snap
---
source: crates/mycelium-hyphae/src/parser.rs
assertion_line: 553
expression: result
---
Ok(
    SelectorList(
        [
            Simple(
                SimpleSelector {
                    base: Name(
                        "login",
                    ),
                    pseudo_classes: [],
                },
            ),
        ],
    ),
)
