crates/mycelium-hyphae/src/snapshots/mycelium_hyphae__parser__snapshot_tests__snap_nested_pseudo.snap
---
source: crates/mycelium-hyphae/src/parser.rs
assertion_line: 570
expression: result
---
Ok(
    SelectorList(
        [
            Simple(
                SimpleSelector {
                    base: Name(
                        "foo",
                    ),
                    pseudo_classes: [
                        PseudoClass {
                            name: "calls",
                            argument: Some(
                                SelectorList(
                                    [
                                        Simple(
                                            SimpleSelector {
                                                base: Kind(
                                                    "function",
                                                ),
                                                pseudo_classes: [
                                                    PseudoClass {
                                                        name: "imports",
                                                        argument: None,
                                                    },
                                                ],
                                            },
                                        ),
                                    ],
                                ),
                            ),
                        },
                    ],
                },
            ),
        ],
    ),
)
