crates/mycelium-hyphae/src/snapshots/mycelium_hyphae__parser__snapshot_tests__snap_pseudo_with_arg.snap
---
source: crates/mycelium-hyphae/src/parser.rs
assertion_line: 563
expression: result
---
Ok(
    SelectorList(
        [
            Simple(
                SimpleSelector {
                    base: Name(
                        "foo",
                    ),
                    pseudo_classes: [
                        PseudoClass {
                            name: "calls",
                            argument: Some(
                                SelectorList(
                                    [
                                        Simple(
                                            SimpleSelector {
                                                base: Name(
                                                    "bar",
                                                ),
                                                pseudo_classes: [],
                                            },
                                        ),
                                    ],
                                ),
                            ),
                        },
                    ],
                },
            ),
        ],
    ),
)
