crates/mycelium-hyphae/src/snapshots/mycelium_hyphae__parser__snapshot_tests__snap_sibling.snap
---
source: crates/mycelium-hyphae/src/parser.rs
assertion_line: 558
expression: result
---
Ok(
    SelectorList(
        [
            Combined {
                left: Simple(
                    SimpleSelector {
                        base: Name(
                            "a",
                        ),
                        pseudo_classes: [],
                    },
                ),
                combinator: Sibling,
                right: Simple(
                    SimpleSelector {
                        base: Name(
                            "b",
                        ),
                        pseudo_classes: [],
                    },
                ),
            },
        ],
    ),
)
