crates/mycelium-hyphae/src/snapshots/mycelium_hyphae__parser__snapshot_tests__snap_three_list.snap
---
source: crates/mycelium-hyphae/src/parser.rs
assertion_line: 561
expression: result
---
Ok(
    SelectorList(
        [
            Simple(
                SimpleSelector {
                    base: Name(
                        "a",
                    ),
                    pseudo_classes: [],
                },
            ),
            Simple(
                SimpleSelector {
                    base: Name(
                        "b",
                    ),
                    pseudo_classes: [],
                },
            ),
            Simple(
                SimpleSelector {
                    base: Name(
                        "c",
                    ),
                    pseudo_classes: [],
                },
            ),
        ],
    ),
)
