crates/mycelium-hyphae/src/snapshots/mycelium_hyphae__parser__snapshot_tests__snap_unclosed_paren_err.snap
---
source: crates/mycelium-hyphae/src/parser.rs
assertion_line: 575
expression: result
---
Err(
    UnexpectedEof,
)
