crates/mycelium-hyphae/src/snapshots/mycelium_hyphae__parser__snapshot_tests__snap_universal.snap
---
source: crates/mycelium-hyphae/src/parser.rs
assertion_line: 555
expression: result
---
Ok(
    SelectorList(
        [
            Simple(
                SimpleSelector {
                    base: Universal,
                    pseudo_classes: [],
                },
            ),
        ],
    ),
)
